2012-01-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/list.spad.pamphlet,
	src/interp/*: Remove not needed macros.

2012-01-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/u32vec.spad.pamphlet,
	src/algebra/Makefile.in, src/interp/primitives.lisp:
	Add vectors and matices of 8 and 16 bit numbers.

2012-01-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/*: Remove most of now useless underscores.

2012-01-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* * src/algebra/sf.spad.pamphlet, src/interp/vmlisp.lisp:
	Replace a few elementary functions by Spad versions.

2012-01-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/sf.spad.pamphlet: Add few more elliptic
	functions.

2012-01-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/scan.boot:
	Make underscores significant in Spad/interpreter names
	and strings.

2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/ncomp.boot:
	Fix problem with scope of macros.

2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/primitives.lisp: Improve qsqrt_DF and
	qlog_DF.

2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Improve ELIPIDF.

2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/gaussian.spad.pamphlet: Optimize
	Complex(DoubleFloat) arithmetic.

2012-01-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/sf.spad.pamphlet,
	src/interp/primitives.lisp, src/interp/vmlisp.lisp:
	Fix type mismatches discovered by ecl.

2012-01-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in, src/algebra/Makefile.in
	src/input/Makefile.in, src/boot/Makefile.in,
	src/lisp/Makefile.in, src/paste/Makefile.in,
	contrib/emacs/Makefile.in, config/setup-dep.mk:
	Fix 'make distclean'.

2012-01-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/br-con.boot,